# backbeat

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
backbeat/: Cargo.toml
backbeat-cli/: Cargo.toml
backbeat-cli/examples/: gen_dump.rs
backbeat-cli/src/: convert.rs  inspect.rs  lib.rs  main.rs  merge.rs  model.rs  skill.md  trace.rs  views.rs
backbeat-cli/tests/: end_to_end.rs
backbeat-macros/: Cargo.toml
backbeat-macros/src/: lib.rs
backbeat/src/: cpu.rs  event.rs  format.rs  global.rs  id.rs  lib.rs  record.rs  recorder.rs  registry.rs  ring.rs  schema.rs  wire.rs
backbeat/tests/: derive_smoke.rs  global.rs  global_limit.rs
