[workspace]
members = [
    "backbeat",
    "backbeat-cli",
    "backbeat-macros",
]
resolver = "2"

[workspace.package]
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
repository = "https://github.com/camshaft/backbeat"
license = "MIT"
edition = "2021"
rust-version = "1.88"

[workspace.dependencies]
backbeat = { version = "0.1.1", path = "backbeat" }
backbeat-macros = { version = "0.1.1", path = "backbeat-macros" }

[profile.bench]
lto = true
codegen-units = 1
incremental = false
