[package]
name = "backbeat-macros"
version = "0.1.1"
description = "Derive macro for backbeat: annotate any struct as a traceable event"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/backbeat-macros"
keywords = ["tracing", "flight-recorder", "derive", "macro", "observability"]
categories = ["development-tools::debugging", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
